--- a/day27-one-hot-encoding/day27.ipynb
+++ b/day27-one-hot-encoding/day27.ipynb
@@ -705,7 +705,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. OneHotEncoding using Sklearn"
+    "# 3. OneHotEncoding using Sklearn\n",
+    "\n",
+    "### If we use this we either have to use column_transformer or manually concatenate the encoded columns and drop the original columns \n",
+    "(Number of encoded Columns != Number of original columns so we cannot assign simply to original columns)\n",
+    "\n",
+    "### get_dummies dont have this problem - It will add the new columns in the original dataframe\n",
+    "Use getdummies if we wanna quickly do simple encoding"
    ]
   },
   {
@@ -1293,7 +1299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
