--- a/day37-handling-missing-categorical-data/frequent-value-imputation.ipynb
+++ b/day37-handling-missing-categorical-data/frequent-value-imputation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# See my_notebook for better explanation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
@@ -337,7 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# After imputation the KDE plot of original data and filled data (most freq category) remains same -- Good thing\n",
+    "# After imputation the KDE plot (of target - SalePrice in this case) of original data and imputed data remains same -- Good thing\n",
     "# Why? -- Cuz missing values were <5% "
    ]
   },
@@ -550,7 +557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# KDE plot of imputed and original values (for most frequent category) does not overlap -- bad thing\n",
+    "# KDE plot (of target - SalePrice in this case) of imputed and original values does not overlap -- bad thing\n",
     "# Cuz missing data was a lot -- after imputation the distribution changes a lot"
    ]
   },
