--- a/day43-outlier-removal-using-iqr-method/day43.ipynb
+++ b/day43-outlier-removal-using-iqr-method/day43.ipynb
@@ -191,7 +191,7 @@
     }
    ],
    "source": [
-    "sns.boxplot(df['placement_exam_marks'])"
+    "sns.boxplot(df['placement_exam_marks'])    # since right skewed, outliers are towards the right (high values) "
    ]
   },
   {
@@ -670,7 +670,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -684,7 +684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
