--- a/day52-types-of-gradient-descent/stochastic-gradient-descent-animation.ipynb
+++ b/day52-types-of-gradient-descent/stochastic-gradient-descent-animation.ipynb
@@ -120,6 +120,7 @@
     "\n",
     "start = time.time()\n",
     "\n",
+    "# Applying learning schedule\n",
     "t0,t1 = 5,50\n",
     "def learning_rate(t):\n",
     "    return t0/(t + t1)\n",
@@ -3326,7 +3327,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3340,7 +3341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
