--- a/day55-regularized-linear-models/ridge-regression-from-scratch.ipynb
+++ b/day55-regularized-linear-models/ridge-regression-from-scratch.ipynb
@@ -137,7 +137,7 @@
     "    \n",
     "    def __init__(self,alpha=0.1):\n",
     "        \n",
-    "        self.alpha = alpha\n",
+    "        self.alpha = alphLa\n",
     "        self.coef_ = None\n",
     "        self.intercept_ = None\n",
     "        \n",
@@ -191,7 +191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
