--- a/day57-elasticnet-regression/elastic-net-regression.ipynb
+++ b/day57-elasticnet-regression/elastic-net-regression.ipynb
@@ -134,9 +134,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "45b79702-1064-4bb0-a193-f73d8253fb47",
+   "metadata": {},
+   "source": [
+    "# ElasticNet using SGDRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6b966208-e0d4-4b95-be7d-afe293c13257",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDRegressor\n",
+    "\n",
+    "sgd = SGDRegressor(penalty='elasticnet', alpha=0.005, l1_ratio=0.9, learning_rate='constant', eta0=0.01)\n",
+    "sgd.fit(X_train, y_train)\n",
+    "\n",
+    "r2_score(y_test, sgd.predict(X_test))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cb67b0c",
+   "id": "2ba9944f-220a-4aed-8329-4ffe84b14c3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -144,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -158,7 +181,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
