--- a/day58-logistic-regression/perceptron-trick.ipynb
+++ b/day58-logistic-regression/perceptron-trick.ipynb
@@ -1222,6 +1222,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b911a9d-cee9-43af-880d-9595fd4f2d81",
+   "metadata": {},
+   "source": [
+    "### For certain epochs we can see that the line does not move \n",
+    "### This implies that the point that was chosen was already correctly classified (so no change)|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "373e3b9f-e689-4b35-af8a-3042c147019c",
+   "metadata": {},
+   "source": [
+    "# Comparision with sklearn LogisitcRegression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "b52ead80",
@@ -1304,12 +1321,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ff162ced",
+   "cell_type": "markdown",
+   "id": "c5994adb-3297-4c2d-8b77-7732aed9505d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Problem with perceptron trick and how sklearn LogisticRegression solves this"
+   ]
   },
   {
    "cell_type": "code",
@@ -1322,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1336,7 +1353,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
