--- a/day60-logistic-regression-contd/softmax-demo.ipynb
+++ b/day60-logistic-regression-contd/softmax-demo.ipynb
@@ -355,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = LogisticRegression(multi_class='multinomial')"
+    "clf = LogisticRegression(multi_class='multinomial')    # multiclass is now deprecated, now it automatically solves for multiclass if no. of inputs>2"
    ]
   },
   {
@@ -565,7 +565,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -579,7 +579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
