hyperparameter tuning random forest

--- a/day65-random-forest/4.hyperparameter_tuning.ipynb
+++ b/day65-random-forest/4.hyperparameter_tuning.ipynb
@@ -252,6 +252,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87109ebe-5904-49d6-a470-ad1d1756ba25",
+   "metadata": {},
+   "source": [
+    "## Random Forest v/s other Algorithms without any hyperparameter tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "id": "c14abae7",
@@ -372,6 +380,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8fdac38e-11e5-4416-b96e-6bc742a34718",
+   "metadata": {},
+   "source": [
+    "### We can see that Random Forest performs better out of the box than other algorithms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "420b2928-efce-4d56-a9fe-29cb5690574e",
+   "metadata": {},
+   "source": [
+    "# Hyperparameter Tuning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 84,
    "id": "ea7a757f",
@@ -422,7 +446,7 @@
    "id": "8944923f",
    "metadata": {},
    "source": [
-    "### GridSearchCV"
+    "## Using GridSearchCV"
    ]
   },
   {
@@ -606,7 +630,10 @@
    "id": "087ce49e",
    "metadata": {},
    "source": [
-    "### RandomSearchCV"
+    "## RandomSearchCV \n",
+    "- Faster for larger sets of parameters\n",
+    "- Selects only a few combinations of hyperparameters randomly\n",
+    "- May not provide the best result everytime"
    ]
   },
   {
@@ -675,8 +702,8 @@
     "\n",
     "rf_grid = RandomizedSearchCV(estimator = rf, \n",
     "                       param_distributions = param_grid, \n",
-    "                       cv = 5, \n",
-    "                       verbose=2, \n",
+    "                       cv = 5,\n",
+    "                       verbose=2,\n",
     "                       n_jobs = -1)"
    ]
   },
@@ -784,7 +811,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -798,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
