--- a/day65-random-forest/5.oob_score_demo.ipynb
+++ b/day65-random-forest/5.oob_score_demo.ipynb
@@ -245,6 +245,7 @@
     }
    ],
    "source": [
+    "# Score on OOB samples\n",
     "rf.oob_score_"
    ]
   },
@@ -266,6 +267,7 @@
     }
    ],
    "source": [
+    "# Score on test data\n",
     "y_pred = rf.predict(X_test)\n",
     "accuracy_score(y_test,y_pred)"
    ]
@@ -281,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -295,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
