Completed all Lectures

--- a/todo
+++ b/todo
@@ -1,4 +1,9 @@
 kmeans - make the prediction function and add other functionalities in from scratch code
 Gradient Boosting notebooks
 KNN from scratch - yt video
-SVM notebooks
+SVM Notebooks
+DBSCAN Notebooks
+Imbalanced Data Notebooks
+OPTUNA Notebooks
+XGBoost usage 
+
